--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  color: #2E5660;
+  margin: 5px;
+}
+
 .hidden {
 	display: none;
 }
@@ -5,7 +11,6 @@
 .App {
   font-family: 'Lato', sans-serif;
   height: 100vh;
-  color: black;
 }
 
 h1, h2, h3, h4 {
