--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,11 +1,6 @@
 * {
   box-sizing: border-box;
   color: #2E5660;
-  margin: 5px;
-}
-
-.hidden {
-	display: none;
 }
 
 .App {
@@ -13,6 +8,14 @@
   height: 100vh;
 }
 
+.hidden {
+	display: none;
+}
+
 h1, h2, h3, h4 {
   font-family: 'Inconsolata', monospace;    
+}
+
+a {
+  text-decoration: none;
 }
