--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -39,6 +39,8 @@
     background-color: #FDEEED;
     font-size: 15px;
     margin-bottom: 15px;
+    text-align: center;
+    padding: 3px;
 }
 
 .photo-container img {
